[package]
name = "game"
version = "0.1.0"
edition = "2021"
default-run = "game"

[lib]
crate-type = ["cdylib", "rlib"]
name = "game_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
wgpu = "0.19.4"
winit = "0.29.15"
cfg-if = "1"
game-loop = { version= "1.1.0", features = ["winit"] }
serde = "1.0.198"
serde_json = "1.0.116"
thiserror = "1.0.58"
gilrs = "0.10.6"
derivative = "2.2.0"
strum = { version = "0.26.2", features = ["derive"] }
pollster = "0.3.0"
nalgebra = { version = "0.32.5", features = ["bytemuck"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
cargo-run-wasm = "0.3.2"
cgmath = "0.18.0"
tobj = { version = "4.0.2", features = ["async"] }
instant = "0.1.12"
reqwest = "0.12.4"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
glam = { version = "0.27.0", features = ["bytemuck", "mint"] }
radians = "0.3.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19.4", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
